[tool.poetry]
name = "cronosid-domains-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cronosid_domains_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^5.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
